k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: journey-ns
  labels:
    env: production
