k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journey-backend
  namespace: journey-ns
  labels:
    app: journey-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: journey-backend
  template:
    metadata:
      labels:
        app: journey-backend
    spec:
      serviceAccountName: journey-backend
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: backend-api
        image: 277328279179.dkr.ecr.us-east-1.amazonaws.com/journey-backend:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
