k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: journey-backend-svc
  namespace: journey-ns
  labels:
    app: journey-backend
spec:
  type: ClusterIP
  selector:
    app: journey-backend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
