k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: journey-frontend-svc
  namespace: journey-ns
  labels:
    app: journey-frontend
spec:
  type: ClusterIP
  selector:
    app: journey-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80 
    protocol: TCP
